--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -59,23 +59,23 @@ code {
 
 /* Custom utility classes */
 .text-amazon-orange {
-  color: #ff9900;
+  color: #1d4ed8;
 }
 
 .bg-amazon-orange {
-  background-color: #ff9900;
+  background-color: #1d4ed8;
 }
 
 .border-amazon-orange {
-  border-color: #ff9900;
+  border-color: #1d4ed8;
 }
 
 .hover\:bg-amazon-orange:hover {
-  background-color: #ff9900;
+  background-color: #3b82f6;
 }
 
 .hover\:text-amazon-orange:hover {
-  color: #ff9900;
+  color: #3b82f6;
 }
 
 /* Amazon-like button styles */
